--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "build:scripts": "tsc --project scripts/tsconfig.json",
     "update-gh-pages": "npm install && ./scripts/publish-demos.sh",
     "static-urlify-readme-images": "npm run build:scripts && node scripts/tsc-out/static-urlify-readme-images.js packages/*/README.md",
+    "bump-all-mdc-web-deps": "npm run build:scripts && node scripts/tsc-out/bump-all-mdc-web-deps.js packages/*/README.md",
     "prepack": "npm run build && npm run static-urlify-readme-images",
     "watch": "npm run build && node scripts/watcher.js",
     "watch:tests": "tsc --build test/tsconfig.json -w & tsc --build test/tsconfig-node.json -w"
