--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/button": "^3.0.0",
+    "@material/button": "=4.0.0-canary.e851d4f40.0",
     "@material/mwc-base": "^0.8.0",
     "@material/mwc-icon": "^0.8.0",
     "@material/mwc-ripple": "^0.8.0",
