--- a/packages/formfield/package.json
+++ b/packages/formfield/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/form-field": "^3.0.0",
+    "@material/form-field": "=4.0.0-canary.e851d4f40.0",
     "@material/mwc-base": "^0.8.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2",
