--- a/packages/line-ripple/package.json
+++ b/packages/line-ripple/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/line-ripple": "^3.0.0",
+    "@material/line-ripple": "=4.0.0-canary.e851d4f40.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2",
     "tslib": "^1.10.0"
