--- a/packages/linear-progress/package.json
+++ b/packages/linear-progress/package.json
@@ -15,7 +15,7 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/linear-progress": "^3.0.0",
+    "@material/linear-progress": "=4.0.0-canary.e851d4f40.0",
     "@material/mwc-base": "^0.8.0",
     "lit-element": "^2.2.1",
     "tslib": "^1.10.0"
