--- a/packages/notched-outline/package.json
+++ b/packages/notched-outline/package.json
@@ -16,9 +16,9 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/mwc-base": "^0.8.0",
-    "@material/notched-outline": "^3.0.0",
-    "@material/shape": "^3.0.0",
-    "@material/theme": "^3.0.0",
+    "@material/notched-outline": "=4.0.0-canary.e851d4f40.0",
+    "@material/shape": "=4.0.0-canary.e851d4f40.0",
+    "@material/theme": "=4.0.0-canary.e851d4f40.0",
     "lit-element": "^2.2.1",
     "tslib": "^1.10.0"
   },
