--- a/packages/ripple/package.json
+++ b/packages/ripple/package.json
@@ -15,9 +15,9 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/dom": "^3.1.0",
+    "@material/dom": "=4.0.0-canary.e851d4f40.0",
     "@material/mwc-base": "^0.8.0",
-    "@material/ripple": "^3.0.0",
+    "@material/ripple": "=4.0.0-canary.e851d4f40.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2",
     "tslib": "^1.10.0"
