--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@material/mwc-base": "^0.8.0",
     "@material/mwc-ripple": "^0.8.0",
-    "@material/switch": "^3.0.0",
+    "@material/switch": "=4.0.0-canary.e851d4f40.0",
     "lit-element": "^2.2.1",
     "tslib": "^1.10.0"
   },
