--- a/packages/tab-scroller/package.json
+++ b/packages/tab-scroller/package.json
@@ -16,9 +16,9 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/dom": "^3.1.0",
+    "@material/dom": "=4.0.0-canary.e851d4f40.0",
     "@material/mwc-base": "^0.8.0",
-    "@material/tab-scroller": "^3.0.0",
+    "@material/tab-scroller": "=4.0.0-canary.e851d4f40.0",
     "lit-element": "^2.2.1",
     "tslib": "^1.10.0"
   },
