--- a/packages/textfield/package.json
+++ b/packages/textfield/package.json
@@ -10,16 +10,16 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@material/floating-label": "^3.0.0",
-    "@material/line-ripple": "^3.0.0",
+    "@material/floating-label": "=4.0.0-canary.e851d4f40.0",
+    "@material/line-ripple": "=4.0.0-canary.e851d4f40.0",
     "@material/mwc-base": "^0.8.0",
     "@material/mwc-floating-label": "^0.8.0",
     "@material/mwc-icon": "^0.8.0",
     "@material/mwc-line-ripple": "^0.8.0",
     "@material/mwc-notched-outline": "^0.8.0",
-    "@material/shape": "^3.0.0",
-    "@material/textfield": "^3.0.0",
-    "@material/theme": "^3.0.0",
+    "@material/shape": "=4.0.0-canary.e851d4f40.0",
+    "@material/textfield": "=4.0.0-canary.e851d4f40.0",
+    "@material/theme": "=4.0.0-canary.e851d4f40.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2",
     "tslib": "^1.10.0"
