--- a/packages/top-app-bar-fixed/package.json
+++ b/packages/top-app-bar-fixed/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@material/mwc-base": "^0.8.0",
     "@material/mwc-top-app-bar": "^0.8.0",
-    "@material/top-app-bar": "^3.0.0",
+    "@material/top-app-bar": "=4.0.0-canary.e851d4f40.0",
     "lit-element": "^2.2.1",
     "tslib": "^1.10.0"
   },
