Import symbols from lit-element and lit-html directly. (#472)
Previously, mwc-base re-exported lit-element and lit-html. While that
approach does make it a little easier to manage dependencies, it's
better to include the dependency directly. Lerna can easily be used
install/upgrade a dependency across all or a subset of packages.

- Users are likely to copy this style. We would prefer that if they use
  lit, they directly depend on it, instead of depending on our base class
  even when they may not need it.

- It locks us into using lit in our implementation without a breaking
  change. No plans to change that, but it's just one less thing in our
  API surface.

- It works better for internal Google tooling because the lit dependency
  can be analyzed statically.

--- a/packages/button/package.json
+++ b/packages/button/package.json
@@ -19,6 +19,8 @@
     "@material/mwc-base": "^0.8.0",
     "@material/mwc-icon": "^0.8.0",
     "@material/mwc-ripple": "^0.8.0",
+    "lit-element": "^2.2.1",
+    "lit-html": "^1.1.2",
     "tslib": "^1.10.0"
   },
   "publishConfig": {
