--- a/packages/drawer/package.json
+++ b/packages/drawer/package.json
@@ -19,6 +19,8 @@
     "@material/drawer": "^3.0.0",
     "@material/mwc-base": "^0.8.0",
     "blocking-elements": "^0.1.0",
+    "lit-element": "^2.2.1",
+    "lit-html": "^1.1.2",
     "tslib": "^1.10.0",
     "wicg-inert": "^2.2.0"
   },
