--- a/packages/icon-button-toggle/package.json
+++ b/packages/icon-button-toggle/package.json
@@ -20,6 +20,7 @@
     "@material/mwc-icon": "^0.8.0",
     "@material/mwc-icon-button": "^0.8.0",
     "@material/mwc-ripple": "^0.8.0",
+    "lit-element": "^2.2.1",
     "tslib": "^1.10.0"
   },
   "publishConfig": {
