--- a/packages/icon-button/package.json
+++ b/packages/icon-button/package.json
@@ -19,6 +19,7 @@
     "@material/mwc-base": "^0.8.0",
     "@material/mwc-icon": "^0.8.0",
     "@material/mwc-ripple": "^0.8.0",
+    "lit-element": "^2.2.1",
     "tslib": "^1.10.0"
   },
   "publishConfig": {
