--- a/packages/notched-outline/package.json
+++ b/packages/notched-outline/package.json
@@ -19,6 +19,7 @@
     "@material/notched-outline": "^3.0.0",
     "@material/shape": "^3.0.0",
     "@material/theme": "^3.0.0",
+    "lit-element": "^2.2.1",
     "tslib": "^1.10.0"
   },
   "publishConfig": {
