--- a/packages/ripple/package.json
+++ b/packages/ripple/package.json
@@ -18,7 +18,8 @@
     "@material/dom": "^3.1.0",
     "@material/mwc-base": "^0.8.0",
     "@material/ripple": "^3.0.0",
-    "lit-html": "^1.0.0",
+    "lit-element": "^2.2.1",
+    "lit-html": "^1.1.2",
     "tslib": "^1.10.0"
   },
   "publishConfig": {
