--- a/packages/snackbar/package.json
+++ b/packages/snackbar/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@material/mwc-base": "^0.8.0",
     "@material/snackbar": "^3.0.0",
+    "lit-element": "^2.2.1",
+    "lit-html": "^1.1.2",
     "tslib": "^1.10.0"
   },
   "publishConfig": {
