--- a/packages/switch/package.json
+++ b/packages/switch/package.json
@@ -15,6 +15,7 @@
     "@material/mwc-base": "^0.8.0",
     "@material/mwc-ripple": "^0.8.0",
     "@material/switch": "^3.0.0",
+    "lit-element": "^2.2.1",
     "tslib": "^1.10.0"
   },
   "publishConfig": {
