--- a/packages/tab-bar/package.json
+++ b/packages/tab-bar/package.json
@@ -20,6 +20,7 @@
     "@material/mwc-tab": "^0.8.0",
     "@material/mwc-tab-scroller": "^0.8.0",
     "@material/tab-bar": "^3.0.0",
+    "lit-element": "^2.2.1",
     "tslib": "^1.10.0"
   },
   "publishConfig": {
