--- a/packages/tab-indicator/package.json
+++ b/packages/tab-indicator/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@material/mwc-base": "^0.8.0",
     "@material/tab-indicator": "^3.0.0",
+    "lit-element": "^2.2.1",
+    "lit-html": "^1.1.2",
     "tslib": "^1.10.0"
   },
   "publishConfig": {
