--- a/packages/tab-scroller/package.json
+++ b/packages/tab-scroller/package.json
@@ -19,6 +19,7 @@
     "@material/dom": "^3.1.0",
     "@material/mwc-base": "^0.8.0",
     "@material/tab-scroller": "^3.0.0",
+    "lit-element": "^2.2.1",
     "tslib": "^1.10.0"
   },
   "publishConfig": {
