--- a/packages/textarea/package.json
+++ b/packages/textarea/package.json
@@ -13,6 +13,8 @@
     "@material/mwc-base": "^0.8.0",
     "@material/mwc-textfield": "^0.8.0",
     "@material/textfield": "^3.0.0",
+    "lit-element": "^2.2.1",
+    "lit-html": "^1.1.2",
     "tslib": "^1.10.0"
   },
   "publishConfig": {
