--- a/packages/textfield/package.json
+++ b/packages/textfield/package.json
@@ -11,6 +11,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/floating-label": "^3.0.0",
+    "@material/line-ripple": "^3.0.0",
     "@material/mwc-base": "^0.8.0",
     "@material/mwc-floating-label": "^0.8.0",
     "@material/mwc-icon": "^0.8.0",
@@ -19,8 +20,8 @@
     "@material/shape": "^3.0.0",
     "@material/textfield": "^3.0.0",
     "@material/theme": "^3.0.0",
-    "@material/line-ripple": "^3.0.0",
-    "lit-html": "^1.0.0",
+    "lit-element": "^2.2.1",
+    "lit-html": "^1.1.2",
     "tslib": "^1.10.0"
   },
   "publishConfig": {
