--- a/packages/radio/package.json
+++ b/packages/radio/package.json
@@ -18,6 +18,7 @@
     "@material/mwc-base": "^0.8.0",
     "@material/mwc-ripple": "^0.8.0",
     "@material/radio": "=4.0.0-canary.e851d4f40.0",
+    "@material/touch-target": "=4.0.0-canary.e851d4f40.0",
     "lit-element": "^2.2.1",
     "tslib": "^1.10.0"
   },
