--- a/packages/slider/package.json
+++ b/packages/slider/package.json
@@ -16,6 +16,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/mwc-base": "^0.9.0",
+    "@material/dom": "=4.0.0-canary.e851d4f40.0",
     "@material/slider": "=4.0.0-canary.e851d4f40.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2",
