--- a/packages/dialog/package.json
+++ b/packages/dialog/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@material/dialog": "=4.0.0-canary.e851d4f40.0",
     "@material/touch-target": "=4.0.0-canary.e851d4f40.0",
+    "@material/mwc-base": "^0.9.0",
     "blocking-elements": "^0.1.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2",
