--- a/packages/drawer/package.json
+++ b/packages/drawer/package.json
@@ -17,6 +17,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@material/drawer": "=4.0.0-canary.22d7ad2fb.0",
+    "@material/list": "=4.0.0-canary.22d7ad2fb.0",
     "@material/mwc-base": "^0.10.0",
     "blocking-elements": "^0.1.0",
     "lit-element": "^2.2.1",
