--- a/.github/workflows/bump-mdc-deps.yml
+++ b/.github/workflows/bump-mdc-deps.yml
@@ -27,8 +27,9 @@ jobs:
       run: npm run bump-all-mdc-web-deps
       
     - name: Check if changes made
-      run: echo ::set-output name=git_status::$(git status --porcelain)
+      id: git_status
+      run: echo ::set-output name=status::$(git status --porcelain)
     
     - name: Create PR
-      if: git_status != ""
+      if: steps.git_status.outputs.status != ""
       run: echo "TODO create PR"
